--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,4 +7,4 @@
     </ng-template>
 
 </p-sidebar>
-<p-button id="btn1" styleClass="p-button-rounded p-button-danger" (click)="toggleSidebar()">MENU</p-button>
+<p-button id="btn1" styleClass="p-button-rounded p-button-danger" class="justify-content-end" (click)="toggleSidebar()">MENU</p-button>
