--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <app-sidebar></app-sidebar>
-<button onclick="diaplay()" Class="ms-3 bg-danger">track Order</button>
 
-<script>
-    display() {
-
-    }
-</script>
+<app-timeline></app-timeline>
 <router-outlet>
 </router-outlet>
