--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -11,7 +11,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
                 </p>
-                <button pButton label="Read more" class="p-button-text"></button>
+                <button pButton label="Read more" class="p-button-text bg-danger"></button>
             </p-card>
         </ng-template>
     </p-timeline>
