--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -8,3 +8,4 @@
 
 </p-sidebar>
 <p-button id="btn1" styleClass="p-button-rounded p-button-danger" class="justify-content-end" (click)="toggleSidebar()">MENU</p-button>
+<app-timeline></app-timeline>
