--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,13 +7,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="home">home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="sidebar">Side bar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="shop">Buy Online</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="table">Car details</a>
+                    <a class="nav-link active" aria-current="page" routerLink="table">Task-3</a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
