--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,12 +20,12 @@
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Car Type
+              Task
             </a>
                     <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" routerLink="#">Automatic</a></li>
+                        <li><a class="dropdown-item" routerLink="task4">task-4</a></li>
                         <li>
-                            <a class="dropdown-item" routerLink="#">Manual</a>
+                            <a class="dropdown-item" routerLink="#">task-5</a>
                         </li>
                     </ul>
                 </li>
