--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                     <a class="nav-link active" aria-current="page" routerLink="table">Task-3</a>
                 </li>
                 <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" routerLink="parent" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Task
             </a>
                     <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
