--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,7 +25,13 @@
                     <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" routerLink="task4">task-4</a></li>
                         <li>
-                            <a class="dropdown-item" routerLink="#">task-5</a>
+                            <a class="dropdown-item" routerLink="parent">task-5</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" routerLink="forms">task-6 template-form</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" routerLink="forms-react">task-6 reactive-fom</a>
                         </li>
                     </ul>
                 </li>
