--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,1 +1,1 @@
-<app-child></app-child>
+<app-child [parentProductList]="prodList" [value]="quantity" (productEventEmitter)="showMyProduct($event)" (prodecreaseEventEmitter)="decproduct($event)"></app-child>
