recent commint in router parameter

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,6 +33,9 @@
                         <li>
                             <a class="dropdown-item" routerLink="forms-react">task-6 reactive-fom</a>
                         </li>
+                        <li>
+                            <a class="dropdown-item" routerLink="product">Routing Parameter</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
